--- a/react-boilerplate/src/App.css
+++ b/react-boilerplate/src/App.css
@@ -1,4 +1,11 @@
 .App {
   /* text-align: center; */
   margin: auto 2.5rem;
+  font-family: adobe-garamond-pro,serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
+/* font-family: adobe-garamond-pro,serif;
+font-weight: 700;
+font-style: normal; */
